# datathon-hrt-challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/features/: DECISIONS.md  README_features.md  memory.md
docs/: REPRODUCIBILITY.md  hrt-datathon-2026-submission-deck.pptx
hrt-eth-zurich-datathon-2026/: README.md
hrt-eth-zurich-datathon-2026/headlines/: build_template_catalog.py  headline_intent_counts.csv  headline_superfamily_counts.csv  headline_template_catalog.csv  headline_template_catalog_summary.md  headline_template_intent_superfamily.csv  headline_templates_counts.csv
pipeline/: README.md  README_ENSEMBLING.md  __init__.py  data.py  ensemble_submissions.py  runner.py  strategy.py  types.py
pipeline/strategies/: README.md  always_long.py  always_long_239.py  always_long_239_h1.py  always_long_239_h2.py  always_long_239_h3_templateprior.py  always_long_with_risk_filter.py  btp_rank_hdoc.py  btp_rank_tpl.py  extra_trees_bad_tail_bucket_sizer.py  extra_trees_bad_tail_classifier.py  extra_trees_bad_tail_probability_rank_sizer.py  extra_trees_bad_tail_probability_sizer.py  extra_trees_bad_tail_probability_sizer_catalog_lite.py  extra_trees_bad_tail_regime_mixture.py  k25cap080_zero_weak_survivors_q10.py  model_risk_utils.py  robust_long_price_disagreement.py  subspace_bagged_downside_ranker.py  subspace_bagged_downside_ranker_241.py  subspace_btp_hdoc_ensemble.py  template_strategy.py
side_challenges/: __init__.py
tests/: test_ensemble_submissions.py  test_runner.py  test_strategy.py  test_strategy_catalog.py
(+16 files in other folders)
